--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -56,5 +56,22 @@ label {
     width: 30px;
     height: 30px;
     margin-bottom: 0;
+    padding-right: 25px;
   }
+}
+
+.achieved {
+  background-color: #008C9B;
+  width: 100%;
+  height: 66px;
+  padding-top: 20px;
+  border-radius: 10px;
+  padding-left: 25px;
+  display: flex;
+  justify-content: space-between;
+
+    #check {
+      padding-right: 25px;
+      padding-top: 10px;
+    }
 }
