--- a/app/views/submissions/_submission_task_form.html.erb
+++ b/app/views/submissions/_submission_task_form.html.erb
@@ -1,9 +1,11 @@
 <% goals.each do |goal| %>
-  <div class="list-group-item d-flex task-item" >
+  <div class="d-flex task-item" >
     <% if  goal.name == "Food" %>
       <% [true, true, true].zip(goal.submissions.first(3)).each do |(achieved_value, saved_submission)|%>
         <% if saved_submission %>
-          <h4><s><%= goal.name %></s></h4>
+          <div class="achieved">
+            <h4 style="color: white;"><%= goal.name %></h4>
+          </div>
         <% else %>
           <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
             <%= f.input :achieved, input_html: { value: true } %>
@@ -12,11 +14,11 @@
         <% end %>
       <% end %>
     <% elsif goal.submissions.any? %>
-      <div>
-      <h4><s><%= goal.name %></s></h4>
+      <div class="achieved">
+      <h4 style="color: white;"><%= goal.name %></h4><i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
       </div>
     <% else %>
-      <h4><%= goal.name %></h4>
+      <h4 style="padding-left:25px;"><%= goal.name %></h4>
       <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
         <%= f.input :achieved, label: false, input_html: { value: true } %>
         <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
