--- a/app/views/submissions/_submission_task_form.html.erb
+++ b/app/views/submissions/_submission_task_form.html.erb
@@ -1,14 +1,16 @@
+
 <% goals.each do |goal| %>
   <div class="d-flex task-item" >
     <% if  goal.name == "Food" %>
       <% [true, true, true].zip(goal.submissions.first(3)).each do |(achieved_value, saved_submission)|%>
         <% if saved_submission %>
           <div class="achieved">
-            <h4 style="color: white;"><%= goal.name %></h4>
-          </div>
+            <h4 style="color: white;"><%= goal.name %></h4><i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
+      </div>
         <% else %>
+        <h4 style="padding-left:25px;">Eat</h4><i class="fa-solid fa-utensils"></i>
           <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
-            <%= f.input :achieved, input_html: { value: true } %>
+            <%= f.input :achieved, label: false, input_html: { value: true } %>
             <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
           <% end %>
         <% end %>
@@ -26,3 +28,4 @@
     <% end %>
   </div>
 <% end %>
+          </div>
