--- a/app/assets/stylesheets/components/_task.scss
+++ b/app/assets/stylesheets/components/_task.scss
@@ -1,3 +1,9 @@
+.daily-tasks-title {
+  color: #0F0000;
+  margin: 20px 0 20px 0;
+  text-align: center;
+}
+
 .task-item {
   margin-left: 30px;
   margin-right: 30px;
@@ -19,7 +25,7 @@
   border-radius: 15px;
 }
 
-#add {
+.add {
   background-color: transparent;
   border: 4px solid #008c9bb5;
 }
@@ -42,4 +48,10 @@
   border-radius: 15px;
   // justify-content: space-between;
   // align-items: center;
+}
+
+.see-progress a{
+  text-decoration: none;
+  color: #3b3b3b;
+  font-size: 19px;
 }
