--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -1,15 +1,23 @@
 .popup {
   position: absolute;
   display: block;
-  padding-top: 65%;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   width: 103vw;
   height: 108vh;
   z-index: 999999;
+  padding-top: 55%;
   background-color: rgba(	0,0,0,0.7 );
   img {
     width: 100%;
+  }
+  button {
+    padding-top: 30%;
+    float: right;
+    color: white;
+    font-size: large;
+    position: absolute;
+    left: 80%;
   }
 }
