--- a/app/views/pages/_popup.html.erb
+++ b/app/views/pages/_popup.html.erb
@@ -1,9 +1,9 @@
 <div data-controller = "popup" class="popup">
   <%# <%= image_tag "pop_up/achievement.png" %>
-  <button class= btn btn-primary data-action = "click->popup#close">Close</button>
-  <%= link_to shop_path do %>
-    <div>
+  <div>
+    <button class= btn btn-primary data-action = "click->popup#close">X</button>
+    <%= link_to edit_avatar_path(current_user.avatar.id) do %>
       <%= image_tag "pop_up/30_day_streak.gif" %>
-    </div>
-  <% end %>
+    <% end %>
+  </div>
 </div>
