--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -74,3 +74,13 @@ p {
   position: relative;
   left: 7px;
 }
+
+.weekly-hp-title {
+  font-size: 16px;
+  margin-top: 5px;
+}
+
+.edit-page-text {
+  font-weight: 400;
+  font-size: 17px;
+}
