--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -1,6 +1,6 @@
 .popup {
   position: absolute;
-  display: block;
+  display: none;
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
