--- a/app/views/avatars/edit.html.erb
+++ b/app/views/avatars/edit.html.erb
@@ -1,10 +1,5 @@
 <div class="avatar-edit-bg">
   <div class="block-color">
-  <%= link_to shop_path do %>
-    <div class="setting-icon" id="shop" style="font-size: 2em; color: white;">
-      <i class="fa-solid fa-bag-shopping"></i>
-    </div>
-  <%end%>
     <h3>Update Your Avatar</h3>
   </div>
   <p class="mt-3">Select a category to change your avatar</p>
@@ -40,3 +35,11 @@
     </div>
   </div>
 </div>
+  <p>Shop</p>
+  <div class="shop-icon">
+  <%= link_to shop_path do %>
+    <div style="font-size: 2em; color: white;">
+      <i class="fa-solid fa-shop"></i>
+    </div>
+  <%end%>
+  </div>
