--- a/app/assets/stylesheets/components/_avatar.scss
+++ b/app/assets/stylesheets/components/_avatar.scss
@@ -21,7 +21,7 @@
   left: 50%;
   transform: translateX(-50%);
   z-index: 9;
-  bottom: -1%;
+  bottom: 7%;
 }
 
 .avatar-expression {
@@ -168,5 +168,25 @@
 }
 
 #notification {
-  border: 4px solid red;
+  border: 4px solid #FF6073;
+}
+
+.shop-icon {
+  display: flex;
+  position: relative;
+  top: -205px;
+  left: 361px;
+  background-color: #EFB622;
+  border: 4px solid #EFB622;
+  border-radius: 10px;
+  height: 50px;
+  width: 50px;
+  justify-content: center;
+  justify-items: center;
+  align-items: center;
+}
+
+.avatar-option-wrapper {
+  display: grid;
+  
 }
