--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -1,4 +1,4 @@
-<%= render "popup" if @pop_up %>
+<%= render "popup" %>
 <div class="block-color d-flex mb-4">
   <%= link_to destroy_user_session_path, data: {turbo_method: :delete} do %>
     <div class="setting-icon" id="setting" style="font-size: 2em; color: white;">
