--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -28,7 +28,7 @@
     <p class="text-start ms-3">coins</p>
   </div>
 </div>
-<div class="submission-box" data-controller="submissions">
+<div class="submission-box" >
   <div class="message-box food hide" data-submissions-target="food">
     <%= render "/submissions/food" %>
   </div>
@@ -64,6 +64,9 @@
 </div>
 <div class="container d-flex justify-content-center mt-5">
   <div class="avatar-card" data-controller="expressions" data-expressions-goal-value="<%= params[:goal] %>" data-expressions-url-value="<%= params[:expression_url] %>">
+    <div class="bubble-home hide" data-expressions-target="bubble">
+      <p>Speech bubble</p>
+    </div>
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
     <div class="facial-expression-submission show">
       <%= cl_image_tag current_user.avatar.expression.photo.key, :class => 'avatar-expression', data: {expressions_target: "photo"}%>
@@ -72,7 +75,7 @@
       <%= render "pages/expression" %>
       <%= cl_image_tag current_user.avatar.expression.photo.key, :class => 'avatar-expression' %>
     </div>
-    <%= cl_image_tag @user.avatar.accessories.photo.key , :class => 'avatar-accessories'%>
+    <%= cl_image_tag @user.avatar.accessories.photo.key , :class => 'avatar-accessories', data:{action: "click->expressions#avatar"}%>
     <%= cl_image_tag @user.avatar.hair.photo.key , :class => 'avatar-hair'%>
     <%= cl_image_tag @user.avatar.pants.photo.key, :class => 'avatar-pants'%>
     <%= cl_image_tag @user.avatar.shirt.photo.key, :class => 'avatar-shirt' %>
