--- a/app/assets/stylesheets/components/_shop.scss
+++ b/app/assets/stylesheets/components/_shop.scss
@@ -3,8 +3,8 @@
   background-color: #FDF5D0;
   border: 4px solid #EFB622;
   border-radius: 15px;
-  height: 150px;
-  width: 150px;
+  height: 120px;
+  width: 120px;
   justify-content: center;
   align-items: center;
 }
@@ -16,7 +16,14 @@
   justify-content: center;
   align-items: center;
   justify-items: center;
-  margin: 10px;
+  margin: 60px;
   grid-template-columns: 1fr 1fr;
   height: 400px;
+  grid-row-gap: 38px;
+  margin-top: 197px;
+}
+
+.shop-background {
+  background-color: #FDF5D0;
+  height: 100vh;
 }
