--- a/app/views/avatars/shop.html.erb
+++ b/app/views/avatars/shop.html.erb
@@ -1,21 +1,20 @@
-<div class="block-color d-flex mb-3">
-  <h3>Shop</h3>
-</div>
-<p>My coins</p>
+<div class="shop-background" style="background-image: url('<%= image_path 'backgrounds/shop_background.png'%>');">
 <div class="container d-flex justify-content-center align-items-center">
-  <div class="point-bar">
+  <h3 style="color: white; position: relative; top: 77px; left: 50px;">Shop</h3>
+  <div class="point-bar" style="position: relative; top: 171px; left: -37px;">
     <%= image_tag 'coins/coin.png', class: "coin-icon"%>
     <%# placeholder text below, can interpolate %>
     <p><%= current_user.avatar.coins %></p>
   </div>
 </div>
-<div class="shop-grid mt-5">
+<div class="shop-grid">
   <% @categories.each do |category| %>
     <div class="shop-card-option">
       <button type="button" class="btn bg-transparent" style="width: 100%; height: 100%" data-bs-toggle="modal" data-bs-target="#category-option-<%= category%>" >
-        <p><%= category.capitalize %></p>
+         <%= image_tag "shop_item_cards/shop_item_#{category}.png", class: 'shop-item-card'%>
       </button>
       <%= render "avatars/purchase_modal", category: category %>
     </div>
   <% end %>
+</div>
 </div>
