--- a/app/views/submissions/_submission_task_form.html.erb
+++ b/app/views/submissions/_submission_task_form.html.erb
@@ -1,33 +1,61 @@
+<% counter = 0 %>
 <% goals.each do |goal| %>
-  <div class="d-flex task-item" >
-    <% if  goal.name == "Food" %>
-      <% [true, true, true].zip(goal.submissions.first(3)).each do |(achieved_value, saved_submission)|%>
+  <% if  goal.name == "Food" %>
+    <% [true, true, true].zip(goal.submissions.first(3)).each do |(achieved_value, saved_submission)|%>
+      <div class="d-flex task-item" >
         <% if saved_submission %>
           <div class="achieved">
-            <h4 style="color: white;"><%= goal.name %></h4>
+            <h4 style="color: white;"><i class="fa-solid fa-utensils"></i>
+              <% if counter == 0 %>
+                Breakfast
+              <% elsif counter == 1 %>
+                Lunch
+              <% else %>
+                Dinner
+              <% end %>
+            </h4>
             <i class="fa-solid fa-check fa-lg" id="check"style="color:white;"></i>
           </div>
         <% else %>
-          <h4 style="padding-left:25px;">Eat</h4>
-          <i class="fa-solid fa-utensils"></i>
-          <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
-            <%= f.input :achieved, label: false, input_html: { value: true } %>
-            <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
+          <h4 style="padding-left:25px;" class="d-flex"><i class="fa-solid fa-utensils me-2"></i>
+            <% if counter == 0 %>
+              Breakfast
+            <% elsif counter == 1 %>
+              Lunch
+            <% else %>
+              Dinner
+            <% end %>
+          </h4>
+          <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}}, wrapper_html: { style: "margin-bottom: 0 !important" } do |f| %>
+            <%= f.input :achieved, label: false, input_html: { value: true }, wrapper_html: { style: "margin-bottom: 0 !important; margin-right: 8px" }%>
+            <%= f.input :date, as: :hidden, input_html: { value: Date.today }, wrapper_html: { style: "margin-bottom: 0 !important" } %>
           <% end %>
         <% end %>
-      <% end %>
-    <% elsif goal.submissions.any? %>
+        <% counter += 1 %>
+      </div>
+    <% end %>
+  <% elsif goal.submissions.any? %>
+    <div class="d-flex task-item" >
       <div class="achieved">
         <h4 style="color: white;"><%= goal.name %></h4>
         <i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
       </div>
-    <% else %>
-      <h4 style="padding-left:25px;"><%= goal.name %></h4>
-      <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
-        <%= f.input :achieved, label: false, input_html: { value: true } %>
-        <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
+    </div>
+  <% else %>
+    <div class="d-flex task-item" >
+      <h4 style="padding-left:25px;">
+        <% if goal.name == "Exercise" %>
+          <i class="fa-solid fa-dumbbell"></i>
+        <% elsif goal.name == "Sleep"%>
+          <i class="fa-solid fa-moon"></i>
+        <% else %>
+          <i class="fa-solid fa-book"></i>
+        <% end %>
+        <%= goal.name %></h4>
+      <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}}, wrapper_html: { style: "margin-bottom: 0 !important" } do |f| %>
+        <%= f.input :achieved, label: false, input_html: { value: true }, wrapper_html: { style: "margin-bottom: 0 !important; margin-right: 8px" }%>
+        <%= f.input :date, as: :hidden, input_html: { value: Date.today }, wrapper_html: { style: "margin-bottom: 0 !important" } %>
       <% end %>
-    <% end %>
-  </div>
+    </div>
+  <% end %>
 <% end %>
-</div>
