coins working on the home page

--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -21,3 +21,11 @@
     left: 80%;
   }
 }
+
+.coin50 img{
+  position: absolute;
+  height: 699px;
+  z-index: 99;
+  left: -64px;
+  bottom: 69px;
+}
