--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -63,7 +63,10 @@
   </div>
 </div>
 <div class="container d-flex justify-content-center mt-5">
-  <div class="avatar-card" data-controller="expressions" data-expressions-goal-value="<%= params[:goal] %>" data-expressions-url-value="<%= params[:expression_url] %>">
+  <div class="avatar-card" data-controller="expressions" data-expressions-goal-value="<%= params[:goal] %>" data-expressions-url-value="<%= params[:achieved] %>">
+    <div data-expressions-target="coin50" class="coin50 hide">
+      <%= image_tag "pop_up/coins_50.png"%>
+    </div>
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
     <div class="facial-expression-submission show">
       <%= cl_image_tag current_user.avatar.expression.photo.key, :class => 'avatar-expression', data: {expressions_target: "photo"}%>
