--- a/app/views/submissions/_submission_task_form.html.erb
+++ b/app/views/submissions/_submission_task_form.html.erb
@@ -1,14 +1,15 @@
-
 <% goals.each do |goal| %>
   <div class="d-flex task-item" >
     <% if  goal.name == "Food" %>
       <% [true, true, true].zip(goal.submissions.first(3)).each do |(achieved_value, saved_submission)|%>
         <% if saved_submission %>
           <div class="achieved">
-            <h4 style="color: white;"><%= goal.name %></h4><i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
-      </div>
+            <h4 style="color: white;"><%= goal.name %></h4>
+            <i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
+          </div>
         <% else %>
-        <h4 style="padding-left:25px;">Eat</h4><i class="fa-solid fa-utensils"></i>
+          <h4 style="padding-left:25px;">Eat</h4>
+          <i class="fa-solid fa-utensils"></i>
           <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}} do |f| %>
             <%= f.input :achieved, label: false, input_html: { value: true } %>
             <%= f.input :date, as: :hidden, input_html: { value: Date.today } %>
@@ -17,7 +18,8 @@
       <% end %>
     <% elsif goal.submissions.any? %>
       <div class="achieved">
-      <h4 style="color: white;"><%= goal.name %></h4><i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
+        <h4 style="color: white;"><%= goal.name %></h4>
+        <i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
       </div>
     <% else %>
       <h4 style="padding-left:25px;"><%= goal.name %></h4>
@@ -28,4 +30,3 @@
     <% end %>
   </div>
 <% end %>
-          </div>
