fixing submissions controller

--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -23,7 +23,7 @@
     <p class="text-start ms-3">coins</p>
   </div>
 </div>
-<div class="submission-box" >
+<div class="submission-box" data-controller="submissions">
   <div class="message-box food hide" data-submissions-target="food">
     <%= render "/submissions/food" %>
   </div>
