fixed the hp bar so it reflects properly both on home and dashboard

--- a/app/views/shared/_hp_bar.erb
+++ b/app/views/shared/_hp_bar.erb
@@ -1,3 +1,4 @@
+<%# This partial is not being used. Refer to _healthbar.html.erb on pages folder %>
 <div class="container d-flex">
   <div class="hp-bar ms-3" style="flex-grow: 7">
     <% if @hp_bar_level < 40 %>
