remove additional checkmark, add icons

--- a/app/views/submissions/_submission_task_form.html.erb
+++ b/app/views/submissions/_submission_task_form.html.erb
@@ -45,8 +45,10 @@
               <i class="fa-solid fa-moon"></i>
             <% elsif goal.name == "Reading"%>
               <i class="fa-solid fa-book-open-reader"></i>
-            <% elsif goal.name == "Meditation"%>
+            <% elsif goal.name == "Meditate"%>
               <i class="fa-regular fa-face-smile-beam"></i>
+            <% elsif goal.name == "Strech"%>
+              <i class="fa-solid fa-child-reaching"></i>
             <% else %>
               <i class="fa-solid fa-book"></i>
             <% end %>
@@ -61,11 +63,16 @@
             <i class="fa-solid fa-dumbbell"></i>
           <% elsif goal.name == "Sleep"%>
             <i class="fa-solid fa-moon"></i>
+          <% elsif goal.name == "Reading"%>
+            <i class="fa-solid fa-book-open-reader"></i>
+          <% elsif goal.name == "Meditate"%>
+            <i class="fa-regular fa-face-smile-beam"></i>
+          <% elsif goal.name == "Strech"%>
+            <i class="fa-solid fa-child-reaching"></i>
           <% else %>
             <i class="fa-solid fa-book"></i>
           <% end %>
           <%= goal.name %></h4>
-        <i class="fa-solid fa-check fa-2xl" id="check"style="color:white;"></i>
         <%= simple_form_for [goal, Submission.new], html: {data: {action: "change->tasks#mark"}}, wrapper_html: { style: "margin-bottom: 0 !important" } do |f| %>
           <%= f.input :achieved, label: false, input_html: { value: true }, wrapper_html: { style: "margin-bottom: 0 !important; margin-right: 8px" }%>
           <%= f.input :date, as: :hidden, input_html: { value: Date.today }, wrapper_html: { style: "margin-bottom: 0 !important" } %>
