--- a/app/views/submissions/_submission_task_form.html.erb
+++ b/app/views/submissions/_submission_task_form.html.erb
@@ -47,7 +47,7 @@
               <i class="fa-solid fa-book-open-reader"></i>
             <% elsif goal.name == "Meditate"%>
               <i class="fa-regular fa-face-smile-beam"></i>
-            <% elsif goal.name == "Strech"%>
+            <% elsif goal.name == "Stretch"%>
               <i class="fa-solid fa-child-reaching"></i>
             <% else %>
               <i class="fa-solid fa-book"></i>
@@ -67,7 +67,7 @@
             <i class="fa-solid fa-book-open-reader"></i>
           <% elsif goal.name == "Meditate"%>
             <i class="fa-regular fa-face-smile-beam"></i>
-          <% elsif goal.name == "Strech"%>
+          <% elsif goal.name == "Stretch"%>
             <i class="fa-solid fa-child-reaching"></i>
           <% else %>
             <i class="fa-solid fa-book"></i>
