adding images for both 20 and 50

--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -45,3 +45,11 @@
   position: absolute;
   z-index: 999;
 }
+
+.coin50-task img{
+  position: absolute;
+  height: 699px;
+  z-index: 99;
+  left: 4px;
+  bottom: 4px
+}
