--- a/app/views/goals/new.html.erb
+++ b/app/views/goals/new.html.erb
@@ -12,10 +12,10 @@
       <h4 style="color: #008c9bb5; padding-right: 100px;">Add New Goal</h4>
       <%= render "task_modal" %>
     </div>
-    <div data-tasks-target="coin20" class="coin50 hide">
-      <%= image_tag "pop_up/coins_50.png"%>
+    <div data-tasks-target="coin20" class="coin50-task hide">
+      <%= image_tag "pop_up/coins_20.png"%>
     </div>
-    <div data-tasks-target="coin50" class="coin50 hide">
+    <div data-tasks-target="coin50" class="coin50-task hide">
       <%= image_tag "pop_up/coins_50.png"%>
     </div>
   </div>
