--- a/app/assets/stylesheets/components/_block.scss
+++ b/app/assets/stylesheets/components/_block.scss
@@ -12,9 +12,14 @@
 .speech-bubble {
   width: 100px;
   height: 100px;
-
+  animation:pop-in 0.5s;
   position: absolute;
   top: 150px;
+}
+
+@keyframes pop-in {
+  0% { opacity: 0; transform: scale(0.1); }
+  100% { opacity: 1; transform: scale(1); }
 }
 
 .space {
