--- a/app/assets/stylesheets/components/_popup.scss
+++ b/app/assets/stylesheets/components/_popup.scss
@@ -28,6 +28,12 @@
   z-index: 99;
   left: -64px;
   bottom: 69px;
+  animation:pop-in 0.2s;
+}
+
+@keyframes pop-in {
+  0% { opacity: 0; transform: scale(0.1); }
+  100% { opacity: 1; transform: scale(1); }
 }
 
 .bubble-home img{
@@ -35,6 +41,7 @@
   top: -43px;
   right: 199px;
   position: absolute;
+  animation:pop-in 0.3s;
   z-index: 999;
 }
 
@@ -43,5 +50,11 @@
   top: 174px;
   right: 270px;
   position: absolute;
+  animation:pop-in 0.3s;
   z-index: 999;
+}
+
+@keyframes pop-in {
+  0% { opacity: 0; transform: scale(0.1); }
+  100% { opacity: 1; transform: scale(1); }
 }
