speech bubble only 1

--- a/app/views/pages/_homepage.html.erb
+++ b/app/views/pages/_homepage.html.erb
@@ -63,7 +63,7 @@
       <%= image_tag "pop_up/coins_50.png"%>
     </div>
     <div class="bubble-home hide" data-expressions-target="bubble">
-      <%= image_tag "speech_bubbles/speech_bubble_hmpg_#{[1,2].sample}.png"%>
+      <%= image_tag "speech_bubbles/speech_bubble_hmpg_2.png"%>
     </div>
     <%= cl_image_tag @user.avatar.skin_color.photo.key, :class => 'avatar-skin-color'%>
 
