--- a/app/assets/stylesheets/components/_background.scss
+++ b/app/assets/stylesheets/components/_background.scss
@@ -10,3 +10,12 @@
   flex-direction: column;
   background-color: #FDF5D0;
 }
+
+.background-login {
+  background-color: #A6E1DA;
+  height: 100vh;
+  display: flex;
+  flex-grow: 1;
+  justify-content: center;
+  align-items: center;
+}
