--- a/app/assets/stylesheets/components/_font.scss
+++ b/app/assets/stylesheets/components/_font.scss
@@ -34,9 +34,9 @@ h4 {
 
 p {
   font-family: "Poppins", sans-serif;
-  font-weight: 200;
+  font-weight: 350;
   font-style: normal;
-  // font-size: 16px;
+  font-size: 18px;
   text-align: center;
     margin-bottom: 0;
 }
