--- a/app/views/pages/_popup.html.erb
+++ b/app/views/pages/_popup.html.erb
@@ -1,4 +1,4 @@
-<div data-controller = "popup" class="popup">
+<div data-controller = "<%= params[:show_streak] ? "popup" : "" %>" class="popup">
   <%# <%= image_tag "pop_up/achievement.png" %>
   <button class= btn btn-primary data-action = "click->popup#close">X</button>
   <div>
